<resources>
    <string name="app_name">matchesSimulator</string>
    <string name="cesar_vales">Cesar Vales</string>
    <string name="scrTeamHome">99</string>
    <string name="homeTeamName">TextView</string>
    <string name="awayTeamName">TextView</string>
    <string name="CD_homeTeam">Destricao</string>
    <string name="versusSign">X</string>
    <string name="scrAwayTeam">88</string>
    <string name="CD_teamAway">DescricaoAway</string>
    <string name="cd_home_team">"Imagem time "</string>
    <string name="txt_versus">x</string>
    <string name="cd_simulate">descricao acessibilidade</string>
    <string name="cd_away_team">descicao img</string>
    <string name="erro_api">Unnexpected ERROR</string>
</resources>