<?xml version="1.0" encoding="utf-8"?>


    <androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivHomeTeam"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/CD_homeTeam" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHomeTeamScr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrTeamHome"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
                app:layout_constraintEnd_toStartOf="@+id/tvVersus"
                app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
                app:layout_constraintTop_toTopOf="@+id/ivHomeTeam" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHomeTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defaultMargin"
                android:text="@string/homeTeamName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivHomeTeam"
                app:layout_constraintStart_toStartOf="@+id/ivHomeTeam" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVersus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versusSign"
                app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivHomeTeam" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAwayTeam"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/CD_teamAway" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAwayTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/awayTeamName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivAwayTeam"
                app:layout_constraintStart_toStartOf="@+id/ivAwayTeam" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAwayTeamScr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrAwayTeam"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="@+id/ivAwayTeam"
                app:layout_constraintEnd_toStartOf="@+id/ivAwayTeam"
                app:layout_constraintStart_toEndOf="@+id/tvVersus"
                app:layout_constraintTop_toTopOf="@+id/ivAwayTeam" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
